--- a/_sass/layout/_masthead.scss
+++ b/_sass/layout/_masthead.scss
@@ -3,16 +3,10 @@
    ========================================================================== */
 
 .masthead {
-  position: fixed;
+  position: relative;    /* was fixed */
   background: var(--global-bg-color);
-  height: fit-content;
-  top: 0;
   width: 100%;
-
-  -webkit-animation: intro 0.3s both;
-          animation: intro 0.3s both;
-  -webkit-animation-delay: 0.15s;
-          animation-delay: 0.15s;
+  top: auto;
   z-index: 20;
 
   &::after {
